--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,7 @@
 name: projectflutter
 description: "A new Flutter project."
 
-# A linha abaixo impede que o pacote seja publicado acidentalmente no pub.dev
-# usando `flutter pub publish`. Isso é preferido para pacotes privados.
-publish_to: 'none' # Remova esta linha se quiser publicar no pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -13,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  supabase_flutter: ^2.8.4  # Atualização para a versão mais recente (verifique se há uma versão mais recente em pub.dev)
+  supabase_flutter: ^2.8.4
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
@@ -24,3 +22,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+  assets:
+      - assets/images/faculdade.jpg
