--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  lottie: ^2.6.0  # ou a última versão disponível
   supabase_flutter: ^2.8.4
   cupertino_icons: ^1.0.8
 
@@ -25,3 +26,5 @@ flutter:
   assets:
       - assets/images/faculdade.jpeg
       - assets/images/faculdade1.jpeg
+      - assets/images/welcome.jpeg
+     
