--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  lottie: ^2.7.0  # ou a última versão disponível
-  supabase_flutter: ^2.8.4
   cupertino_icons: ^1.0.8
-  flutter_svg: ^2.0.7 # ou a versão mais recente
-  image_picker: ^0.8.7+3
-  carousel_slider: ^4.2.1
-
+  carousel_slider: ^5.1.1
+  flutter_svg: ^2.2.0
+  image_picker: ^1.1.2
+  lottie: ^3.3.1
+  supabase_flutter: ^2.9.1
 
 dev_dependencies:
   flutter_test:
